--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,7 +23,7 @@
 
 @media only screen and (max-width: 767px) {
     .mainmenu-area {
-        background: #1e5799;
+        background: #50d1c0;
         background: -webkit-linear-gradient(left, #1e5799 0%, #3ccdbb 0%, #16c9f6 100%);
         background: linear-gradient(to right, #1e5799 0%, #3ccdbb 0%, #16c9f6 100%);
         filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#16c9f6', GradientType=1);
